pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError10.pkl
foo: Mapping = new { ["foo"] = 1; ["bar"] = 2 }
bar: Mapping<String, String> = (foo) { ["baz"] = "three" }
